Improve clustering (#274)
* hmm

* idk

* make it work

* remove old web page for joining

* set roles and such

* dont join when we have data

* add wizard to deploy cluster

* send bootstrap roles

* update docs
